# StageDessinGraphe

./: CMakeLists.txt  ChallengeFolderWindows.7z  CustomParam  EdgeMaps.hpp  Notes  NotesResultats  _CustomParam  _Notes  _Tests  aretes.hpp  arg.cpp  arg.h  carte.cpp  carte.h  cellule.hpp  dispOpenGL.hpp  emplacement.hpp  fmmm.cpp  fmmm.hpp  generate_svg.sh  genetique.hpp  geometrie.cpp  geometrie.hpp  graphe.hpp  grapheDebug.cpp  grapheGenetique.cpp  grapheGlouton.cpp  grapheJsonIO.cpp  graphePlacement.cpp  grapheRecuitSimule.cpp  grapheScore.cpp  grapheUtils.cpp  graphic.py  graphique.cpp  graphique.hpp  intersection.cpp  intersection.hpp  jsonIO.hpp  kernel.cu  kernel.h  (+21 more)
ChallengeFolder/: ChallengeSetupScript
benchGraphs/dimacsClean/: adjnoun.graphclean  celegans_metabolic.graphclean  celegansneural.graphclean  email.graphclean  football.graphclean  hep-th.graphclean  jazz.graphclean  netscience.graphclean  power.graphclean
benchGraphs/sparceMCClean/: 1138_bus.mtxclean  bcsstk08.mtxclean  ch7-6-b1.mtxclean  commanche_dual.mtxclean  eris1176.mtxclean  mahindas.mtxclean  mk9-b2.mtxclean
cmake/: FindGperftools.cmake
combined/: cgraph-1.json  cgraph-2.json  exemple1.json  exemple2.json
exemple/Graphe/: 5completModif.json  graph-1-input.json  graph-10-input.json  graph-11-input.json  graph-12-input.json  graph-2-input.json  graph-3-input.json  graph-4-input.json  graph-5-input.json  graph-6-input.json  graph-7-input.json  graph-8-input.json  graph-9-input.json  graph-auto21-1.json  graph-auto21-2.json  graph-auto21-3.json  graph-auto21-4.json  graph-auto21-5.json  graph-auto21-6.json  graph_exemple1.json  graph_exemple2.json  test.json
exemple/Reel/: output.json
exemple/Slots/: 1-input-slots.json  10-input-slots.json  11-input-slots.json  12-input-slots.json  2-input-slots.json  2X-1-input-slots.json  2X-10-input-slots.json  2X-11-input-slots.json  2X-12-input-slots.json  2X-2-input-slots.json  2X-3-input-slots.json  2X-4-input-slots.json  2X-5-input-slots.json  2X-6-input-slots.json  2X-7-input-slots.json  2X-8-input-slots.json  2X-9-input-slots.json  3-input-slots.json  3X-1-input-slots.json  3X-10-input-slots.json  3X-11-input-slots.json  3X-12-input-slots.json  3X-2-input-slots.json  3X-3-input-slots.json  3X-4-input-slots.json  3X-5-input-slots.json  3X-6-input-slots.json  3X-7-input-slots.json  3X-8-input-slots.json  3X-9-input-slots.json  4-input-slots.json  5-input-slots.json  6-input-slots.json  7-input-slots.json  8-input-slots.json  9-input-slots.json  auto21-1-slots.json  auto21-2-slots.json  auto21-3-slots.json  auto21-4-slots.json  (+4 more)
profilerData/: profile.output
resultats/: perfUSet.csv
